--- a/index.qmd
+++ b/index.qmd
@@ -16,11 +16,11 @@ title: "Senegalese Slave Liberations Project"
 session: "Spring 2024"
 image: "data/imgs/placeholder.jpg"
 project-members:
-  - name: Dr. Jane Doe
+  - name: Professor Richard Roberts
     designation: Faculty Director of Department
     orcid: https://orcid.org/0000-0000-0000-0000
-  - name: John Doe
-    designation: Intern - Summer, 2023
+  - name: Vernita Zhai
+    designation: Intern - Spring, 2024
     orcid: https://orcid.org/0000-0000-0000-0000
 
 project-description: "The project Description contains few lines of description about the project. The description should be succint and give the reader a brief overview of what they could expect in the article. The project description can span from 4-5 lines and it is expected to capture the complete essence of the project. This article page comprises of two sub-articles related to the group. The article 1 focuses on the authoring capabilites of quarto and article 2 focuses on the computational capabilities. This article page is made using Quarto."
