--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,7 @@ format:
 # do not edit ends
 title: "Senegalese Slave Liberations Project"
 session: "Spring 2024"
-image: "data/imgs/placeholder.jpg"
+image: "data/imgs/Figure 2.png"
 project-members:
   - name: Professor Richard Roberts
     designation: Professor of History
