--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,6 @@ format:
 # do not edit ends
 title: "Senegalese Slave Liberations Project"
 session: "Spring 2024"
-image: "data/imgs/Figure 2.png"
 project-members:
   - name: Professor Richard Roberts
     designation: Professor of History
@@ -32,10 +31,17 @@ Vernita Zhai
 :::
 My Spring Quarter internship with the Senegalese Slave Liberations Project revolved around two main components: expanding the project database of slave liberation records, and enhancing the accessibility and richness of the project website through gathering and creating visual materials. 
 
-For the data entry portion of my internship, I focused on transcribing liberation records from the digitized register of 1058 cases from the year 1882 onto the project's database spreadsheet, recording each liberated individual’s name, age, place of birth, parents’ names, place of liberation within colonial Senegal, date of liberation, authorizing administrator, and, in the case of minors, guardian name and occupation. Building upon the work of previous interns, I paid particular attention to the familial connections among liberated individuals and identified sibling relations as a new point of interest to be noted alongside parental relations. The main challenge posed by data entry was no doubt deciphering the sometimes illegible, ambiguous, or inconsistent 19th-century French cursive handwriting of the register, but with reference to the document’s index, previous data entry records, and initial assistance from Becca, a former intern, I quickly became comfortable navigating the script. Moreover, the inconsistencies and ambiguities in the script often turned out to be fruitful, offering valuable insights into the orthographic conventions of the time and the challenges that arise from the phonetic conversion of local Senegalese dialects into French.
+For the data entry portion of my internship, I focused on transcribing liberation records from the digitized register of 1058 cases from the year 1882 onto the project's database spreadsheet, recording each liberated individual’s name, age, place of birth, parents’ names, place of liberation within colonial Senegal, date of liberation, authorizing administrator, and, in the case of minors, guardian name and occupation (see Figure 1). Building upon the work of previous interns, I paid particular attention to the familial connections among liberated individuals and identified sibling relations as a new point of interest to be noted alongside parental relations. The main challenge posed by data entry was no doubt deciphering the sometimes illegible, ambiguous, or inconsistent 19th-century French cursive handwriting of the register, but with reference to the document’s index, previous data entry records, and initial assistance from Becca, a former intern, I quickly became comfortable navigating the script. Moreover, the inconsistencies and ambiguities in the script often turned out to be fruitful, offering valuable insights into the orthographic conventions of the time and the challenges that arise from the phonetic conversion of local Senegalese dialects into French.
 
-As a central aim of the Senegalese Slave Liberation Project is to make the primary data on liberation available for scholarly and pedagogical use, another crucial component of my work this quarter involved gathering and creating visualizations to be incorporated into the project’s website. Drawing upon sources such as Giulia Paoletti’s Portrait and Place: Photography in Senegal, 1840–1960, and archives from the photographic department of the Archives nationales d'outre-mer in Aix-en-Provence, I curated a series of photographs depicting life in colonial Senegal. These images will be used to accompany and enrich the project website, which contains articles on the history of slavery in Senegal as well as broader discussions of freedom and unfreedom in a global context. In addition to sourcing photographs, I worked on converting subsets of the transcribed data into accessible and aesthetically engaging visualizations. Together, these various visual elements contribute towards the team’s ongoing efforts to enhance the availability and legibility of the Registers of Slave Liberation in Colonial Segal—a rich, sprawling, yet underused primary database—for a wider audience.
+![Figure 1. A page from the Registers of Slave Liberation in Colonial Senegal document held at the National Archives of Senegal in Dakar, featuring liberation cases from April 1882. The Registers of Liberation consist of twenty ledgers containing records of 28,930 liberations that occurred between 1857 and 1903. While the format of data entry evolved through the years, this featured page provides a representative glimpse into the entry system employed by the colonial administration.](data/imgs/Figure 1.png)
 
+As a central aim of the Senegalese Slave Liberation Project is to make the primary data on liberation available for scholarly and pedagogical use, another crucial component of my work this quarter involved gathering and creating visualizations to be incorporated into the project’s website. Drawing upon sources such as Giulia Paoletti’s Portrait and Place: Photography in Senegal, 1840–1960, and archives from the photographic department of the Archives nationales d'outre-mer in Aix-en-Provence, I curated a series of photographs and maps of colonial Senegal (see Figures 2 and 3). These images will be used to accompany and enrich the project website, which contains articles on the history of slavery in Senegal as well as broader discussions of freedom and unfreedom in a global context. In addition to sourcing photographs, I worked on converting subsets of the transcribed data into accessible and aesthetically engaging visualizations. Together, these various visual elements contribute towards the team’s ongoing efforts to enhance the availability and legibility of the Registers of Slave Liberation in Colonial Segal—a rich, sprawling, yet underused primary database—for a wider audience.
+
+![Figure 2. A panoramic photograph of Saint-Louis—the capital of the French colony of Senegal from 1673 to 1902—taken by A. Jacques and originally published in the album Souvenirs du Sénégal, 1866–1867. The photograph is featured in Portrait and Place: Photography in Senegal, 1840–1960 by Giulia Paoletti (2024), one of the secondary sources that I consulted in gathering visual materials for the project website.](data/imgs/Figure 2.png)
+
+![Figure 3. Maps of French colonies in Senegal and the islands of Mayotte, Nosy-Be and Sainte-Marie-de-Madagascar (modern-day Madagascar), overlaying an indigenous landscape. A chromolithograph card published in 1890, the illustration will be added to the collection of maps currently displayed on the project website.](data/imgs/Figure 3.jpg)
+
+![Figure 4. Figure 4. Most preferred destinations of liberated individuals in April 1882, ordered by descending popularity and color-coded by region. The desired destination of liberated individuals was a category that had been included in the first liberation registers of 1857, but omitted for many years since and not reinstated until 1882. Visualization created using Tableaux.](data/imgs/Figure 4.png)
 
 
 
@@ -66,7 +72,9 @@ This is an example of a 'folded' caution callout that can be expanded by the use
 ### Figures
 In Quarto, figures can be easily imported using the markdown syntax, given the image is stored in the codebase. You can see the example given below.
 
-![Figure 1. A page from the Registers of Slave Liberation in Colonial Senegal document held at the National Archives of Senegal in Dakar, featuring liberation cases from April 1882. The Registers of Liberation consist of twenty ledgers containing records of 28,930 liberations that occurred between 1857 and 1903. While the format of data entry evolved through the years, this featured page provides a representative glimpse into the entry system employed by the colonial administration.](data/imgs/Figure 1.png)
+
+![Maps of French colonies in Senegal and the islands of Mayotte, Nosy-Be and Sainte-Marie-de-Madagascar (modern-day Madagascar), overlaying an indigenous landscape. A chromolithograph card published in 1890, the illustration will be added to the collection of maps currently displayed on the project website.](data/imgs/Figure 1.png)
+
 
 Below is a full column image.
 
