--- a/index.qmd
+++ b/index.qmd
@@ -41,7 +41,7 @@ As a central aim of the Senegalese Slave Liberation Project is to make the prima
 
 ![Figure 3. Maps of French colonies in Senegal and the islands of Mayotte, Nosy-Be and Sainte-Marie-de-Madagascar (modern-day Madagascar), overlaying an indigenous landscape. A chromolithograph card published in 1890, the illustration will be added to the collection of maps currently displayed on the project website.](data/imgs/Figure 3.jpg)
 
-![Figure 4. Figure 4. Most preferred destinations of liberated individuals in April 1882, ordered by descending popularity and color-coded by region. The desired destination of liberated individuals was a category that had been included in the first liberation registers of 1857, but omitted for many years since and not reinstated until 1882. Visualization created using Tableaux.](data/imgs/Figure 4.png)
+![Figure 4. Figure 4. Most preferred destinations of liberated individuals in April 1882, ordered by descending popularity and color-coded by region. The desired destination of liberated individuals was a category that had been included in the first liberation registers of 1857, but omitted for many years since and not reinstated until 1882. Visualization created using Tableaux.](data/imgs/Figure 4.)
 
 
 
