--- a/index.qmd
+++ b/index.qmd
@@ -39,7 +39,7 @@ For the data entry portion of my internship, I focused on transcribing liberatio
 :::{.article-author}
 Vernita Zhai
 :::
-As a central aim of the Senegalese Slave Liberation Project is to make the primary data on liberation available for scholarly and pedagogical use, another crucial component of my work this quarter involved gathering and creating visualizations to be incorporated into the project’s website. Drawing upon sources such as Giulia Paoletti’s Portrait and Place: Photography in Senegal, 1840–1960, and archives from the photographic department of the Archives nationales d'outre-mer in Aix-en-Provence, I curated a series of photographs and maps of colonial Senegal (see Figures 2 and 3). These images will be used to accompany and enrich the project website, which contains articles on the history of slavery in Senegal as well as broader discussions of freedom and unfreedom in a global context. In addition to sourcing photographs, I worked on converting subsets of the transcribed data into accessible and aesthetically engaging visualizations. Together, these various visual elements contribute towards the team’s ongoing efforts to enhance the availability and legibility of the Registers of Slave Liberation in Colonial Segal—a rich, sprawling, yet underused primary database—for a wider audience.
+As a central aim of the Senegalese Slave Liberation Project is to make the primary data on liberation available for scholarly and pedagogical use, another crucial component of my work this quarter involved gathering and creating visualizations to be incorporated into the project’s website. Drawing upon sources such as Giulia Paoletti’s Portrait and Place: Photography in Senegal, 1840–1960, and archives from the photographic department of the Archives nationales d'outre-mer in Aix-en-Provence, I curated a series of photographs and maps of colonial Senegal (see Figures 2 and 3). These images will be used to accompany and enrich the project website, which contains articles on the history of slavery in Senegal as well as broader discussions of freedom and unfreedom in a global context. In addition to sourcing photographs, I worked on converting subsets of the transcribed data into accessible and aesthetically engaging visualizations (see Figure 4). Together, these various visual elements contribute towards the team’s ongoing efforts to enhance the availability and legibility of the Registers of Slave Liberation in Colonial Segal—a rich, sprawling, yet underused primary database—for a wider audience.
 
 ![Figure 2. A panoramic photograph of Saint-Louis—the capital of the French colony of Senegal from 1673 to 1902—taken by A. Jacques and originally published in the album Souvenirs du Sénégal, 1866–1867. The photograph is featured in Portrait and Place: Photography in Senegal, 1840–1960 by Giulia Paoletti (2024), one of the secondary sources that I consulted in gathering visual materials for the project website.](data/imgs/Figure 2.png)
 
