--- a/index.qmd
+++ b/index.qmd
@@ -29,7 +29,7 @@ Vernita Zhai
 :::
 My Spring Quarter internship with the Senegalese Slave Liberations Project revolved around two main components: expanding the project database of slave liberation records, and enhancing the accessibility and richness of the project website through gathering and creating visual materials. 
 
-For the data entry portion of my internship, I focused on transcribing liberation records from the digitized register of 1058 cases from the year 1882 onto the project's database spreadsheet, recording each liberated individual’s name, age, place of birth, parents’ names, place of liberation within colonial Senegal, date of liberation, authorizing administrator, and, in the case of minors, guardian name and occupation (see Figure 1). Building upon the work of previous interns, I paid particular attention to the familial connections among liberated individuals and identified sibling relations as a new point of interest to be noted alongside parental relations. The main challenge posed by data entry was no doubt deciphering the sometimes illegible, ambiguous, or inconsistent 19th-century French cursive handwriting of the register, but with reference to the document’s index, previous data entry records, and initial assistance from Becca, a former intern, I quickly became comfortable navigating the script. Moreover, the inconsistencies and ambiguities in the script often turned out to be fruitful, offering valuable insights into the orthographic conventions of the time and the challenges that arise from the phonetic conversion of local Senegalese dialects into French.
+For the data entry portion of my internship, I focused on transcribing liberation records from the digitized register of slave liberations onto the project's database spreadsheet, recording each liberated individual’s name, age, place of birth, parents’ names, place of liberation within colonial Senegal, date of liberation, authorizing administrator, and, in the case of minors, guardian name and occupation (see Figure 1). Building upon the work of previous interns, I paid particular attention to the familial connections among liberated individuals and identified sibling relations as a new point of interest to be noted alongside parental relations. The main challenge posed by data entry was no doubt deciphering the sometimes illegible, ambiguous, or inconsistent 19th-century French cursive handwriting of the register, but with reference to the document’s index, previous data entry records, and initial assistance from Becca, a former intern, I quickly became comfortable navigating the script. Moreover, the inconsistencies and ambiguities in the script often turned out to be fruitful, offering valuable insights into the orthographic conventions of the time and the challenges that arise from the phonetic conversion of local Senegalese dialects into French.
 
 ![Figure 1. A page from the Registers of Slave Liberation in Colonial Senegal document held at the National Archives of Senegal in Dakar, featuring liberation cases from April 1882. The Registers of Liberation consist of twenty ledgers containing records of 28,930 liberations that occurred between 1857 and 1903. While the format of data entry evolved through the years, this featured page provides a representative glimpse into the entry system employed by the colonial administration.](data/imgs/Figure 1.png)
 
